# sophos-central

./: .coverage  .gitignore  LICENSE  README.md  TODO.md  example.py  export_to_csv.py  main.py  pyproject.toml  sync_to_db.py
.github/workflows/: security.yml
central/: __init__.py  classes.py  db.py  logging_config.py  session.py  sync_to_db.py
central/alerts/: __init__.py  classes.py  methods.py
central/common/: __init__.py  classes.py  methods.py
central/firewalls/: __init__.py  classes.py  methods.py
central/firewalls/firmware/: __init__.py  classes.py  methods.py
central/firewalls/groups/: __init__.py  classes.py  methods.py
central/firewalls/licenses/: classes.py  methods.py
central/firewalls/mdr/: __init__.py  methods.py
releases/: RELEASE_NOTES_v0.9.5.md  RELEASE_NOTES_v0.9.6.md  RELEASE_NOTES_v0.9.7.md  RELEASE_NOTES_v0.9.8.md  RELEASE_NOTES_v0.9.9.md
tests/: __init__.py  conftest.py  test_example.py
tests/central/: test_alerts_coverage.py  test_classes.py  test_db.py  test_db_extra.py  test_firewall_class_geo.py  test_firewalls_methods_errors.py  test_init.py  test_logging_config.py  test_session.py  test_session_coverage.py  test_sync_to_db.py
tests/central/alerts/: test_classes.py  test_methods.py
tests/central/common/: test_classes.py  test_methods.py
tests/central/firewalls/: test_classes.py  test_methods.py
tests/central/firewalls/firmware/: test_classes.py  test_methods.py
tests/central/firewalls/groups/: test_classes.py  test_methods.py
tests/central/firewalls/licenses/: test_classes.py  test_methods.py
tests/central/firewalls/mdr/: test_methods.py
