[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfos-central-sdk"
version = "0.9.6"
description = "CLI and Python API for Sophos Central (firewalls, licenses, alerts, firmware)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Alan Toews", email = "your.alan@toews.io" }
]
keywords = ["sophos", "central", "firewall", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "dotenv>=0.9.9",
    "openpyxl>=3.1.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.0.0",
]

[project.scripts]
central-sync-to-db = "central.sync_to_db:main"

[tool.setuptools]
py-modules = ["example"]

[tool.setuptools.packages.find]
include = ["central*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=central --cov=example --cov-report=term-missing --cov-fail-under=99"

[tool.coverage.run]
branch = true
source = ["central", "example"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert_used – allow asserts in non-test code if desired
